--- a/tab.html
+++ b/tab.html
@@ -52,7 +52,7 @@
 			<nav class="navbar-mobile">
 				<div class="container-fluid">
 					<ul class="navbar-mobile__list list-unstyled">
-						<li class="has-sub">
+						<!-- <li class="has-sub">
 							<a class="js-arrow" href="#">
 								<i class="fas fa-tachometer-alt"></i>Dashboard</a>
 							<ul class="navbar-mobile-sub__list list-unstyled js-sub-list">
@@ -69,7 +69,11 @@
 									<a href="index4.html">Dashboard 4</a>
 								</li>
 							</ul>
-						</li>
+						</li> -->
+						<li>
+                            <a href="index.html">
+                                <i class="fas fa-tachometer-alt"></i>Dashboard</a>
+                        </li>
 						<li>
 							<a href="chart.html">
 								<i class="fas fa-chart-bar"></i>Charts</a>
