--- a/forget-pass.html
+++ b/forget-pass.html
@@ -43,13 +43,29 @@
                             </a>
                         </div>
                         <div class="login-form">
-                            <form action="" method="post">
+                            <form id="resetForm" onsubmit="event.preventDefault(); resetPassword();">
                                 <div class="form-group">
                                     <label>Email Address</label>
-                                    <input class="au-input au-input--full" type="email" name="email" placeholder="Email">
+                                    <input class="au-input au-input--full" type="email" id="email" name="email"
+                                        placeholder="Email" required>
                                 </div>
-                                <button class="au-btn au-btn--block au-btn--green m-b-20" type="submit">submit</button>
+
+                                <div class="form-group">
+                                    <label>New Password</label>
+                                    <input class="au-input au-input--full" type="password" id="newPassword"
+                                        name="newPassword" placeholder="Password Baru" required>
+                                </div>
+
+                                <button id="resetBtn" class="au-btn au-btn--block au-btn--green"
+                                    style="margin-top: 10px;" type="submit">
+                                    Reset Password
+                                </button>
                             </form>
+                            <div class="register-link">
+                                <p>Remember Password? <a href="login.html">Login Here!</a></p>
+                            </div>
+
+
                         </div>
                     </div>
                 </div>
@@ -66,6 +82,74 @@
     <!-- Vendor JS       -->
     <script src="vendor/perfect-scrollbar/perfect-scrollbar-1.5.6.min.js"></script>
     <script src="vendor/chartjs/chart.umd.js-4.5.0.min.js"></script>
+
+    <script>
+        const scriptURL = "https://script.google.com/macros/s/AKfycbwyutAXOuSEfy1yItsWsWNCPBzOqyI-lktXPUdizX3H05Bj-syHkbrUIIbWWPGvXDBI8Q/exec";
+        const resetBtn = document.getElementById("resetBtn");
+
+        async function resetPassword() {
+            const email = document.getElementById("email").value.trim();
+            const newPassword = document.getElementById("newPassword").value.trim();
+
+            if (!email || !newPassword) {
+                showMessage("⚠️ Email dan password baru wajib diisi!", "warning");
+                return;
+            }
+
+            // ubah tombol jadi loading
+            resetBtn.disabled = true;
+            resetBtn.innerHTML = `<i class="fas fa-spinner fa-spin"></i> Sedang memproses...`;
+
+            try {
+                const response = await fetch(scriptURL, {
+                    method: "POST",
+                    body: new URLSearchParams({
+                        action: "forgotPassword",
+                        email,
+                        newPassword
+                    })
+                });
+
+                const result = await response.json();
+                showMessage(result.message, result.success ? "success" : "error");
+
+                if (result.success) document.getElementById("resetForm").reset();
+
+            } catch (error) {
+                console.error(error);
+                showMessage("❌ Terjadi kesalahan koneksi.", "error");
+            } finally {
+                resetBtn.disabled = false;
+                resetBtn.innerHTML = "Reset Password";
+            }
+        }
+
+        // Notifikasi pojok bawah
+        function showMessage(msg, type = "info") {
+            const colors = {
+                success: "#4CAF50",
+                error: "#f44336",
+                warning: "#ff9800",
+                info: "#2196F3"
+            };
+
+            const div = document.createElement("div");
+            div.textContent = msg;
+            div.style.position = "fixed";
+            div.style.bottom = "20px";
+            div.style.right = "20px";
+            div.style.background = colors[type];
+            div.style.color = "white";
+            div.style.padding = "10px 15px";
+            div.style.borderRadius = "8px";
+            div.style.boxShadow = "0 3px 8px rgba(0,0,0,0.3)";
+            div.style.zIndex = "9999";
+            div.style.transition = "opacity 0.3s ease";
+            document.body.appendChild(div);
+            setTimeout(() => { div.style.opacity = "0"; setTimeout(() => div.remove(), 300); }, 2000);
+        }
+    </script>
+
 
     <!-- Main JS-->
     <script src="js/bootstrap5-init.js"></script>
