--- a/login.html
+++ b/login.html
@@ -76,14 +76,14 @@
                                     </select>
                                 </div>
 
-                                <div class="login-checkbox" style="margin-top: 5px;">
+                                <!-- <div class="login-checkbox" style="margin-top: 5px;">
                                     <label>
                                         <input type="checkbox" name="remember"> Remember Me
                                     </label>
                                     <label>
                                         <a href="forget-pass.html">Forgot Password?</a>
                                     </label>
-                                </div>
+                                </div> -->
 
                                 <button class="au-btn au-btn--block au-btn--green" type="submit"
                                     style="margin-top: 3px;">Login</button>
@@ -91,10 +91,10 @@
 
 
                             <div class="register-link">
-                                <p>
+                                <!-- <p>
                                     Belum Punya Akun?
                                     <a href="register.html">Register Here!</a>
-                                </p>
+                                </p> -->
                             </div>
                         </div>
                     </div>
