--- a/login.html
+++ b/login.html
@@ -76,17 +76,20 @@
                                     </select>
                                 </div>
 
-                                <!-- <div class="login-checkbox" style="margin-top: 5px;">
+                                <div  style="margin-top: 5px;">
                                     <label>
-                                        <input type="checkbox" name="remember"> Remember Me
+                                        
                                     </label>
-                                    <label>
-                                        <a href="forget-pass.html">Forgot Password?</a>
-                                    </label>
-                                </div> -->
+                                   <label style="float: right;">
+    <a href="#" onclick="alert('Silahkan hubungi admin jika ingin merubah password.'); return false;">
+        Forgot Password?
+    </a>
+</label>
+
+                                </div>
 
                                 <button class="au-btn au-btn--block au-btn--green" type="submit"
-                                    style="margin-top: 3px;">Login</button>
+                                    style="margin-top: 10px;">Login</button>
                             </form>
 
 
