--- a/map.html
+++ b/map.html
@@ -164,13 +164,20 @@ body.dark-mode .navbar-mobile__list li a.active {
                                 <i class="fas fa-chart-bar"></i>Charts</a>
                         </li> -->
                         <li>
-                            <a href="table.html">
-                                <i class="fas fa-table"></i>Tables</a>
+                            <a href="progresttd.html">
+                                <i class="fas fa-tasks"></i>Progres TTD</a>
                         </li>
+                        
                         <li>
                             <a href="form.html">
                                 <i class="far fa-check-square"></i>Forms</a>
                         </li>
+
+                        <li>
+                            <a href="statusdokumen.html">
+                                <i class="fas fa-file-alt"></i>Status Dokumen</a>
+                        </li>
+
                         <li>
                             <a href="calendar.html">
                                 <i class="fas fa-calendar-alt"></i>Calendar</a>
@@ -194,9 +201,14 @@ body.dark-mode .navbar-mobile__list li a.active {
                                         <i class="fas fa-unlock-alt"></i> Forget Password
                                     </a>
                                 </li> -->
-                                <li id="menuAccountMobile2">
+                                <li id="menuAccountMobile1">
                                     <a href="users.html">
                                         <i class="fas fa-user-edit"></i> Users
+                                    </a>
+                                </li>
+                                <li id="menuAccountMobile2">
+                                    <a href="approval.html" >
+                                        <i class="fas fa-tasks"></i> Approval
                                     </a>
                                 </li>
                                 <li>
@@ -294,13 +306,20 @@ body.dark-mode .navbar-mobile__list li a.active {
                                 <i class="fas fa-chart-bar"></i>Charts</a>
                         </li> -->
                         <li>
-                            <a href="table.html">
-                                <i class="fas fa-table"></i>Tables</a>
+                            <a href="progresttd.html">
+                                <i class="fas fa-tasks"></i>Progres TTD</a>
                         </li>
+                        
                         <li>
                             <a href="form.html">
                                 <i class="far fa-check-square"></i>Forms</a>
                         </li>
+
+                        <li>
+                            <a href="statusdokumen.html">
+                                <i class="fas fa-file-alt"></i>Status Dokumen</a>
+                        </li>
+
                         <li>
                             <a href="calendar.html">
                                 <i class="fas fa-calendar-alt"></i>Calendar</a>
@@ -324,9 +343,14 @@ body.dark-mode .navbar-mobile__list li a.active {
                                         <i class="fas fa-unlock-alt"></i> Forget Password
                                     </a>
                                 </li> -->
-                                <li id="menuAccountDesktop2">
+                                <li id="menuAccountDesktop1">
                                     <a href="users.html">
                                         <i class="fas fa-user-edit"></i> Users
+                                    </a>
+                                </li>
+                                <li id="menuAccountDesktop2">
+                                    <a href="approval.html" >
+                                        <i class="fas fa-tasks"></i> Approval
                                     </a>
                                 </li>
                                 <li>
