--- a/profile.html
+++ b/profile.html
@@ -164,12 +164,18 @@
                                 <i class="fas fa-chart-bar"></i>Charts</a>
                         </li> -->
                         <li>
-                            <a href="table.html">
-                                <i class="fas fa-table"></i>Tables</a>
+                            <a href="progresttd.html">
+                                <i class="fas fa-tasks"></i>Progres TTD</a>
                         </li>
+                        
                         <li>
                             <a href="form.html">
                                 <i class="far fa-check-square"></i>Forms</a>
+                        </li>
+
+                        <li>
+                            <a href="statusdokumen.html">
+                                <i class="fas fa-file-alt"></i>Status Dokumen</a>
                         </li>
                         <li>
                             <a href="calendar.html">
@@ -194,9 +200,14 @@
                                         <i class="fas fa-unlock-alt"></i> Forget Password
                                     </a>
                                 </li> -->
-                                <li id="menuAccountMobile2">
+                                <li id="menuAccountMobile1">
                                     <a href="users.html">
                                         <i class="fas fa-user-edit"></i> Users
+                                    </a>
+                                </li>
+                                <li id="menuAccountMobile2">
+                                    <a href="approval.html" >
+                                        <i class="fas fa-tasks"></i> Approval
                                     </a>
                                 </li>
                                 <li>
@@ -294,12 +305,18 @@
                                 <i class="fas fa-chart-bar"></i>Charts</a>
                         </li> -->
                         <li>
-                            <a href="table.html">
-                                <i class="fas fa-table"></i>Tables</a>
+                            <a href="progresttd.html">
+                                <i class="fas fa-tasks"></i>Progres TTD</a>
                         </li>
+                        
                         <li>
                             <a href="form.html">
                                 <i class="far fa-check-square"></i>Forms</a>
+                        </li>
+
+                        <li>
+                            <a href="statusdokumen.html">
+                                <i class="fas fa-file-alt"></i>Status Dokumen</a>
                         </li>
                         <li>
                             <a href="calendar.html">
@@ -324,9 +341,14 @@
                                         <i class="fas fa-unlock-alt"></i> Forget Password
                                     </a>
                                 </li> -->
-                                <li id="menuAccountDesktop2">
+                                <li id="menuAccountDesktop1">
                                     <a href="users.html">
                                         <i class="fas fa-user-edit"></i> Users
+                                    </a>
+                                </li>
+                                <li id="menuAccountDesktop2">
+                                    <a href="approval.html" >
+                                        <i class="fas fa-tasks"></i> Approval
                                     </a>
                                 </li>
                                 <li>
@@ -798,6 +820,7 @@ document.addEventListener("DOMContentLoaded", function () {
     }
 
     loadProfile();
+    setInterval(loadProfile, 15000);
 
     // ===========================
     // 🔹 KLIK EDIT PROFIL
